@startuml

SeriesSelectorWizardPage o-- Configuration
Wizard *-- SeriesSelectorWizardPage
Wizard *-- EpisodeSelectorWizardPage
EpisodeSelectorWizardPage *-- SeriesDataCalculator
EpisodeSelectorWizardPage o-- Configuration
SeriesDataCalculator o-- Configuration
Wizard *-- EpisodeRunner
SeriesDataCalculator ..> EpisodeInfo
EpisodeRunner o-- Configuration

class Wizard {
  void accept()
}
class Configuration {
  std::string_view GetRootDir()
  std::string_view GetVlcPath()
  const char* GetSeriesName(int idx)
  std::string_view GetSeriesDirName(int idx)
  int GetSeriesCount()
}

class SeriesDataCalculator {
  const std::vector<EpisodeInfo>& GetSeriesData(int idx)
}

class EpisodeRunner {
  void run(std::string_view path, std::string_view subtitles)
}

class EpisodeInfo {
  std::string description
  std::string movie_path
  std::string subtitle_path
}

class EpisodeSelectorWizardPage {
  std::pair<std::string_view, std::string_view> GetPathToSelectedEpisode()
  void UpdateEpisodeList(int page_id) [slot]
  void SetCurrentId(int current_id) [slot]
  void FilterEpisodeList(const QString& filter) [slot]
}

@enduml
